<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>com.xf</groupId> <!-- 对应父模块的 groupId -->
		<artifactId>spring-cloud-alibaba-base-demo</artifactId> <!-- 对应父模块的 artifactId -->
		<version>0.0.1-SNAPSHOT</version> <!-- 对应父模块的版本 -->
		<relativePath>../pom.xml</relativePath> <!-- 父模块的位置 -->
	</parent>
	<groupId>com.xf</groupId>
	<artifactId>cloud-gateway</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>cloud-gateway</name>
	<description>cloud-gateway</description>

	<properties>
		<java.version>17</java.version>
        <springdoc.version>2.6.0</springdoc.version>
	</properties>
	<dependencies>
		<!-- API网关 gateway-->
		<dependency>
			<groupId>org.springframework.cloud</groupId>
			<artifactId>spring-cloud-starter-gateway</artifactId>
		</dependency>
		<!-- Spring Boot Actuator -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>
		<!-- 负载均衡 loadbalancer -->
		<dependency>
			<groupId>org.springframework.cloud</groupId>
			<artifactId>spring-cloud-starter-loadbalancer</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-redis</artifactId>
		</dependency>
        <!-- 集成springdoc gateway 文档依赖-->
        <dependency>
            <groupId>org.springdoc</groupId>
            <artifactId>springdoc-openapi-starter-webflux-ui</artifactId>
            <version>${springdoc.version}</version>
        </dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
		</plugins>
	</build>

</project>
